Fixed help page misaligning on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -230,7 +230,6 @@ footer {
 .helpText {
 	margin-left: 30px;
 	margin-top: 30px;
-	width: 500px;
 }
 
 #overallMenu {
